--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
             <a href="#">Formulario de Contacto</a>
             <p>¡Esperamos recibir tu mensaje y ayudarte a planificar una estadia inolvidable en nuestras cabañas! 🌲🏡</p>
              <form>
-    <h1>¡Que esperas reserva ahora!</h2>
+    <h1>¡Reserva ahora!</h2>
   </form>
           <fieldset>
             <form><h2>Regístrate</h2></form>
@@ -481,8 +481,9 @@
             <form>
               <h2>Por consultas escríbenos y a la brevedad te responderemos:</h2>
               <textarea name="dudas" rows="4" cols="100" placeholder="Escribe aquí tus preguntas..."></textarea>
+              <br>
               <input type="submit" value="Enviar">
-              <button type="submit">Reservar</button>
+            
 
           </form>
 
