--- a/index.html
+++ b/index.html
@@ -14,22 +14,21 @@
 <body id="inicio">0
 
     <header>
-    <!-- Logo -->
-
-    <div id="logo-img">
+    <!-- Logo -->        
+<nav class="navbar">
+    <div class="logo-img">
         <img src="./css/img/logo/l (1).jpg" alt="logo-img" width="50" height="50">
     </div>
 
     <!-- Menú -->
-    <div>
-        <ul>
+        <ul class="menu">
             <li><a href="#inicio"><span> <i class="fa-solid fa-house"></i></span>Inicio</a></li>
             <li><a href="#cabañas"> <span><i class="fa-solid fa-feather"></i> </span>Cabañas</a></li>
             <li><a href="#reservas"><span></span><i class="fa-solid fa-bookmark"></i>   </span>   Reservas </a></li>
             <li><a href="#ubicacion"><span><i class="fa-solid fa-map-location-dot"></i>  </span>Ubicacion</a></li>
             <li><a href="#contacto"><span><i class="fa-solid fa-book-open-reader"></i>   </span>Contacto</a></li>
         </ul>
-    </div>
+</nav>
     
      <!-- Carrousel Inicio -->
     
