--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
     <header>
     <!-- Logo -->        
 <nav class="navbar">
-    <div class="logo-img">
-        <img src="./css/img/logo/l (1).jpg" alt="logo-img" width="50" height="50">
+    <div class="logo">
+        <img src="./css/img/logo/l (1).jpg" alt="Logo">
     </div>
 
     <!-- Menú -->
         <ul class="menu">
-            <li><a href="#inicio"><span> <i class="fa-solid fa-house"></i></span>Inicio</a></li>
-            <li><a href="#cabañas"> <span><i class="fa-solid fa-feather"></i> </span>Cabañas</a></li>
-            <li><a href="#reservas"><span></span><i class="fa-solid fa-bookmark"></i>   </span>   Reservas </a></li>
-            <li><a href="#ubicacion"><span><i class="fa-solid fa-map-location-dot"></i>  </span>Ubicacion</a></li>
-            <li><a href="#contacto"><span><i class="fa-solid fa-book-open-reader"></i>   </span>Contacto</a></li>
+            <li><a href="#"><i class="material-icons"></i> Inicio</a></li>
+            <li><a href="#"><i class="material-icons"></i> Cabañas</a></li>
+            <li><a href="#"><i class="material-icons"></i> Reservas</a></li>
+            <li><a href="#"><i class="material-icons"></i> Ubicación</a></li>
+            <li><a href="#"><i class="material-icons"></i> Contacto</a></li>
         </ul>
 </nav>
     
