--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
         
         <form>
     <h1>¡Que esperas reserva ahora!</h2>
+   <form>
+       <p><h2>Reservas</h2></p>
+   </form>
   </form>
           <fieldset>
             
